 * Added a new FloatBlock, DecimalBlock and a RegexBlock (Oktay Altay, Andy Babic)
 * Wagtail version number is now shown on the settings menu (Chris Rogers)
 * Added a system check to validate that fields listed in `search_fields` are defined on the model (Josh Schneier)
 * Added formal APIs for customising the display of StructBlock forms within the page editor (Matt Westcott)
 * Fix: Email templates and document uploader now support custom `STATICFILES_STORAGE` (Jonny Scholes)
 * Fix: Removed alignment options (deprecated in HTML and not rendered by Wagtail) from `TableBlock` context menu (Moritz Pfeiffer)
 * Fix: Fixed incorrect CSS path on ModelAdmin's "choose a parent page" view
 * Fix: Prevent empty redirect by overnormalisation (Franklin Kingma, Ludolf Takens)
 * Fix: "Remove link" button in rich text editor didn't trigger "edit" event, leading to the change to sometimes not be persisted (Matt Westcott)
 * Fix: `RichText` values can now be correctly evaluated as booleans (Mike Dingjan, Bertrand Bordage)
 * Fix: wagtailforms no longer assumes an .html extension when determining the landing page template filename (kakulukia)
 * Fix: Fixed styling glitch on bi-colour icon + text buttons in Chrome (Janneke Janssen)


1.5.2 (08.06.2016)
~~~~~~~~~~~~~~~~~~

 * Fixed regression in 1.5.1 on editing external links (Stephen Rice)

1.5.1 (07.06.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: When editing a document link in rich text, the document ID is no longer erroneously interpreted as a page ID (Stephen Rice)
 * Fix: Removing embedded media from rich text by mouse click action now gets correctly registered as a change to the field (Loic Teixeira)
 * Fix: Rich text editor is no longer broken in InlinePanels (Matt Westcott, Gagaro)
 * Fix: Rich text editor is no longer broken in settings (Matt Westcott)
 * Fix: Link tooltip now shows correct urls for newly inserted document links (Matt Westcott)